--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@
 # Ignore all build directories and their trees. This should exclude all
 # build products.
 /BUILD*
+/build*
 /release*
 /debug*
 
+Makefile
 *.pro.user
